src/objects/CRM_Order_Event_Out_V1__e.object
<CustomObject>
    <description>Platform event published from Salesforce for Order insert and updates, which will be consumed by Kafka</description>
    <fields>
        <fullName>Line_Items__c</fullName>
        <label>Line Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>accountID__c</fullName>
        <label>accountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>action__c</fullName>
        <label>action</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>author__c</fullName>
        <label>author</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankAccountName__c</fullName>
        <label>bankAccountName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankAccountNumber__c</fullName>
        <label>bankAccountNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankCountryCode__c</fullName>
        <label>bankCountryCode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankCurrencyCode__c</fullName>
        <label>bankCurrencyCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankID__c</fullName>
        <label>bankID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankName__c</fullName>
        <label>bankName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bic__c</fullName>
        <label>bic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddress1__c</fullName>
        <label>billingAddress1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddress2__c</fullName>
        <label>billingAddress2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddress3__c</fullName>
        <label>billingAddress3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressAccountID__c</fullName>
        <label>billingAddressAccountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressBusinessName__c</fullName>
        <label>billingAddressBusinessName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressCity__c</fullName>
        <label>billingAddressCity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressCountryCode__c</fullName>
        <label>billingAddressCountryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressCountry__c</fullName>
        <label>billingAddressCountry</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressFirstName__c</fullName>
        <label>billingAddressFirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressID__c</fullName>
        <label>billingAddressID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressIsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>billingAddressIsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>billingAddressIsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag controls the Billing Address Primary</description>
        <label>billingAddressIsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>billingAddressLastName__c</fullName>
        <label>billingAddressLastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressPostalCode__c</fullName>
        <label>billingAddressPostalCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressPrimaryPhone__c</fullName>
        <label>billingAddressPrimaryPhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressStateProvince__c</fullName>
        <label>billingAddressStateProvince</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingTaxExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>billingTaxExempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>billingTaxRegistrationNumber__c</fullName>
        <label>billingTaxRegistrationNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branchName__c</fullName>
        <label>branchName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countryCode__c</fullName>
        <label>countryCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditCardAuthorizationCode__c</fullName>
        <label>creditCardAuthorizationCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditCardExpirationDate__c</fullName>
        <label>creditCardExpirationDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditCardID__c</fullName>
        <label>creditCardID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditCardToken__c</fullName>
        <label>creditCardToken</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditCardTransactionID__c</fullName>
        <label>creditCardTransactionID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditCardType__c</fullName>
        <label>creditCardType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currencyCode__c</fullName>
        <label>currencyCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deliveryTerm__c</fullName>
        <description>Delivery Term mostly used with International Distributors.</description>
        <label>deliveryTerm</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entityType__c</fullName>
        <label>entityType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventDate__c</fullName>
        <label>eventDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSourceID__c</fullName>
        <label>eventSourceID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSource__c</fullName>
        <defaultValue>&apos;SFDC&apos;</defaultValue>
        <label>eventSource</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iban__c</fullName>
        <label>iban</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceDate__c</fullName>
        <label>invoiceDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceNumber__c</fullName>
        <label>invoiceNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSignatureRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSignatureRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <label>metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>operation__c</fullName>
        <label>operation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderNumber__c</fullName>
        <label>orderNumber</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderType__c</fullName>
        <label>orderType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentSystemOfOriginID__c</fullName>
        <label>parentSystemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentMethod__c</fullName>
        <label>paymentMethod</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentTerm__c</fullName>
        <label>paymentTerm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>poNumber__c</fullName>
        <description>Order&apos;s Purchase Order Number.</description>
        <label>poNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pricebookName__c</fullName>
        <label>pricebookName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rgaNumber__c</fullName>
        <label>rgaNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduledShipDate__c</fullName>
        <label>scheduledShipDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddress1__c</fullName>
        <label>shippingAddress1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddress2__c</fullName>
        <label>shippingAddress2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddress3__c</fullName>
        <label>shippingAddress3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressAccountID__c</fullName>
        <label>shippingAddressAccountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressBusinessName__c</fullName>
        <label>shippingAddressBusinessName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressCity__c</fullName>
        <label>shippingAddressCity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressCountryCode__c</fullName>
        <label>shippingAddressCountryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressCountry__c</fullName>
        <label>shippingAddressCountry</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressFirstName__c</fullName>
        <label>shippingAddressFirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressID__c</fullName>
        <label>shippingAddressID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressIsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>shippingAddressIsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shippingAddressIsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag controls the Shipping Address Primary.</description>
        <label>shippingAddressIsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shippingAddressLastName__c</fullName>
        <label>shippingAddressLastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressPostalCode__c</fullName>
        <label>shippingAddressPostalCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressPrimaryPhone__c</fullName>
        <label>shippingAddressPrimaryPhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAddressStateProvince__c</fullName>
        <label>shippingAddressStateProvince</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingAmount__c</fullName>
        <label>shippingAmount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shippingEmail__c</fullName>
        <label>shippingEmail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingMethod__c</fullName>
        <label>shippingMethod</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingNotes__c</fullName>
        <label>shippingNotes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingTaxExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>shippingTaxExempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shippingTaxRegistrationNumber__c</fullName>
        <label>shippingTaxRegistrationNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statusMessage__c</fullName>
        <label>statusMessage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>studyID__c</fullName>
        <description>Field that holds the Clinical Study ID. Appropriate for Clinical Orders.</description>
        <label>studyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOriginID__c</fullName>
        <label>systemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOrigin__c</fullName>
        <label>systemOfOrigin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tax__c</fullName>
        <label>tax</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>totalAmount__c</fullName>
        <label>totalAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warehouse__c</fullName>
        <label>warehouse</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>CRM Order Event V1 - Out</label>
    <pluralLabel>CRM_Order_Events_V1 - Out</pluralLabel>
</CustomObject>